@@ -139,6 +139,9 @@ definitional packages should use balanced blocks of
 Local_Theory.open_target versus Local_Theory.close_target instead,
 or the Local_Theory.subtarget(_result) combinator. Rare INCOMPATIBILITY.
 
+* Slightly more conventional naming schema in structure Inductive.
+Minor INCOMPATIBILITY.
+
 * Original PolyML.pointerEq is retained as a convenience for tools that
 don't use Isabelle/ML (where this is called "pointer_eq").
 
